# pi-vault

./: .gitignore  AGENT_CONTRACT.md  DECISIONS.md  NEXT_ACTIONS.md  PROJECT_PLAN.md  PROJECT_STATUS.md  README.md  START_HERE.md  install.sh  package-lock.json  package.json  uninstall.sh  update.sh
vault-manager/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
vault-manager/evals/: EMBEDDING_4B_vs_06B.md  README.md  __init__.py  common.py  report.py
vault-manager/tests/: test_action_queue.py  test_artifact_import.py  test_autonomous_schema_obsidian.py  test_cli.py  test_custom_property_population.py  test_custom_routing.py  test_dashboard_layout.py  test_dashboard_table.py  test_data_driven_types.py  test_definitions.py  test_embeddings.py  test_evals_graders.py  test_frontmatter.py  test_json_output.py  test_layout_suggestion.py  test_llm_proposals.py  test_metadata_normalization.py  test_model_blocks.py  test_norms_and_organization.py  test_people.py  test_pi_vault.py  test_property_remap.py  test_proposal_generators.py  test_realign_gate.py  test_reconcile.py  test_refine.py  test_review_proposals.py  test_safety.py  test_schema_defaults.py  test_schema_note.py  test_summary_property.py  test_templates.py  test_topic_hubs.py  test_versioning.py  test_workflows.py
vault-manager/vault_agent/: __init__.py  action_queue.py  artifact_import.py  autonomous.py  base_hierarchy.py  cli.py  config.py  dashboard_layout.py  dashboard_table.py  embedding_index.py  embeddings.py  execution.py  frontmatter.py  generated_state.py  hermes.py  init.py  layout_routing.py  (+35 more)
(+43 files in other folders)
