[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-manager"
version = "0.1.0"
description = "Local-first Obsidian vault management and retrieval agent."
requires-python = ">=3.11"
dependencies = ["PyYAML==6.0.3"]

[project.scripts]
vault-agent = "vault_agent.cli:main"

[tool.setuptools.packages.find]
include = ["vault_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
